# Metis

./: .gitignore  README.md
backend/: package-lock.json  package.json  requirements.txt
backend/action_executor/: main.py
backend/action_recorder/: main.py
backend/action_recorder/UIED-3.3/: data_minified.json  jsoncomp.py  run_single.py  t2.py
backend/action_recorder/UIED-3.3/detect_text/: ocr.py  text_detection.py
backend/action_recorder/util/: box_annotator.py
libs/UIED-3.3/: jsoncomp.py  run_single.py  tester.py
libs/UIED-3.3/detect_compo/: ip_region_proposal.py
metis-agent/: package-lock.json  package.json
metis-agent/.next/: app-build-manifest.json  trace
metis-agent/.next/cache/: .rscinfo
metis-agent/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
metis-agent/.next/server/app/: page.js  page_client-reference-manifest.js
metis-agent/.next/server/chunks/: [root of the server]__022459._.js.map  node_modules_next_c84c4b._.js.map
metis-agent/.next/static/chunks/: [root of the server]__31723f._.js  [root of the server]__31723f._.js.map  [root of the server]__f81d50._.js  [root of the server]__f81d50._.js.map  _03d84a._.js  _03d84a._.js.map  _04d89b._.js  _04d89b._.js.map  _10fed6._.js  _10fed6._.js.map  _17b8cf._.js  _17b8cf._.js.map  _22d2ba._.js.map  _266f27._.js  _266f27._.js.map  _3488b1._.js  _3488b1._.js.map  _3a345d._.js  _3a345d._.js.map  _3b7144._.js  _3b7144._.js.map  _4dc1c6._.js  _4dc1c6._.js.map  _626bbf._.js  (+132 more)
metis-agent/app/: globals.css  layout.tsx  page.tsx
metis-agent/app/action-history/: page.tsx
metis-agent/app/automations/: page.tsx
metis-agent/app/help-support/: page.tsx
metis-agent/app/learn/: page.tsx
metis-agent/app/settings/: page.tsx
metis-agent/components/: AccountDropdown.tsx  MindMap.tsx  MindMapContext.tsx  ModeToggle.tsx  NotificationsDropdown.tsx  RecordingContext.tsx  ScreenCaptureWidget.tsx
metis-agent/components/layout/: sidebar.tsx  topbar.tsx
metis-agent/lib/: action-analyzer.ts  action-executor.ts  automation-manager.ts  database-manager.ts  skill-manager.ts
metis-agent/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
metis-agent/src-tauri/icons/: icon.icns
metis-agent/src-tauri/src/: action.rs  llm.rs  main.rs  recording_commands.rs  skill_commands.rs
rust-modules/: Cargo.toml
rust-modules/action_executor/: Cargo.toml
rust-modules/memory_module/: Cargo.toml
tests/backend/: testhtml.py
(+176 files in other folders)
