[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
once_cell = "1.17"
image = "0.24"
base64 = "0.21"
dirs = "4.0"
scrap = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rdev = { version = "0.5.3", features = ["unstable_grab"] }
crossbeam-channel = "0.5"
rand = "0.8.5"  # Added for random ID generation
futures = "0.3.28"  # Useful for async operations

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
